# speech2text-api

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  serve.sh  speakers.py
static/: index.html
